--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "uid2": "0.0.3"
+    "uid2": "0.0.3",
+    "validator": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
